Test fix for mobile styling cutting off at bottom of viewport due to address bar

--- a/application/static/styles/base/base.css
+++ b/application/static/styles/base/base.css
@@ -103,13 +103,13 @@ tbody td a {
 }
 body {
     font-family: "JetBrains Mono", serif;
-    height: 100vh;
+    height: 100dvh;
     overflow: auto;
     background-color: var(--secondary-bg-color) !important;
 }
 
 html {
-    height: 100vh;
+    height: 100dvh;
     overflow: hidden;
 }
 
