--- a/application/static/styles/layout/nav.scss
+++ b/application/static/styles/layout/nav.scss
@@ -5,7 +5,7 @@
         border-right-color: var(--white);
         border-right-style: solid;
         border-right-width: 1px;
-        min-height: 100vh;
+        min-height: 100dvh;
     }
 }
 
